added responsive in contactpage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Inter:300,regular,500,600,700&display=swap" rel="stylesheet" />
-  <title>Coca-Cola</title>
+  <title>Coca-Cola Global Home</title>
 </head>
 
 <body>
